[+]: added lab_06
